# cpp-http-server

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
config/: server.conf  server.conf.example
docs/: API.md  TECH_REPORT.md
include/: http_logger.hpp  http_metrics.hpp  http_prometheus.hpp  http_request.hpp  http_response.hpp  http_router.hpp  http_server.hpp  json_utils.hpp  middleware.hpp  note_store.hpp  rate_limiter.hpp  server_config.hpp  shutdown.hpp  thread_pool.hpp
migrations/: 001_notes.sql
public/: index.html  notes.html
scripts/: bench.sh  init-db.sh
src/: http_logger.cpp  http_prometheus.cpp  http_request.cpp  http_response.cpp  http_router.cpp  http_server.cpp  json_utils.cpp  main.cpp  middleware.cpp  note_store.cpp  rate_limiter.cpp  server_config.cpp  shutdown.cpp  thread_pool.cpp
tests/: http_client.cpp  http_client.hpp  test_database.cpp  test_database.hpp  test_http_prometheus.cpp  test_http_request.cpp  test_http_response.cpp  test_http_router.cpp  test_integration.cpp  test_json_utils.cpp  test_note_store.cpp  test_rate_limiter.cpp  test_server_config.cpp
